--- a/css/main.css
+++ b/css/main.css
@@ -1036,6 +1036,11 @@ video {
   background-color: rgb(1 211 175 / var(--tw-bg-opacity));
 }
 
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .object-contain{
   -o-object-fit: contain;
      object-fit: contain;
@@ -1185,6 +1190,10 @@ video {
 
 .pb-12{
   padding-bottom: 3rem;
+}
+
+.pl-2{
+  padding-left: 0.5rem;
 }
 
 .text-left{
@@ -2053,6 +2062,14 @@ input[type="number"] {
     align-items: flex-start;
   }
 
+  .md\:justify-start{
+    justify-content: flex-start;
+  }
+
+  .md\:justify-between{
+    justify-content: space-between;
+  }
+
   .md\:gap-16{
     gap: 4rem;
   }
@@ -2070,6 +2087,10 @@ input[type="number"] {
 
   .md\:p-2{
     padding: 0.5rem;
+  }
+
+  .md\:p-4{
+    padding: 1rem;
   }
 
   .md\:py-2{
