--- a/css/main.css
+++ b/css/main.css
@@ -2014,6 +2014,10 @@ input[type="number"] {
     margin-bottom: 4rem;
   }
 
+  .md\:mb-20{
+    margin-bottom: 5rem;
+  }
+
   .md\:block{
     display: block;
   }
