--- a/css/main.css
+++ b/css/main.css
@@ -706,10 +706,6 @@ video {
   margin-bottom: 5rem;
 }
 
-.mb-16{
-  margin-bottom: 4rem;
-}
-
 .block{
   display: block;
 }
@@ -787,8 +783,12 @@ video {
   width: 180px;
 }
 
-.w-\[400px\]{
-  width: 400px;
+.w-\[200px\]{
+  width: 200px;
+}
+
+.w-\[300px\]{
+  width: 300px;
 }
 
 .max-w-md{
@@ -972,6 +972,11 @@ video {
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
+.border-b-slate-200{
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(226 232 240 / var(--tw-border-opacity));
+}
+
 .border-t-gray-100{
   --tw-border-opacity: 1;
   border-top-color: rgb(243 244 246 / var(--tw-border-opacity));
@@ -980,16 +985,6 @@ video {
 .border-b-gray-100{
   --tw-border-opacity: 1;
   border-bottom-color: rgb(243 244 246 / var(--tw-border-opacity));
-}
-
-.border-b-slate-200{
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(226 232 240 / var(--tw-border-opacity));
-}
-
-.border-t-gray-200{
-  --tw-border-opacity: 1;
-  border-top-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
 .bg-white{
@@ -1034,11 +1029,6 @@ video {
 .bg-accent{
   --tw-bg-opacity: 1;
   background-color: rgb(1 211 175 / var(--tw-bg-opacity));
-}
-
-.bg-black{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .object-contain{
@@ -1138,11 +1128,6 @@ video {
   padding-bottom: 2.5rem;
 }
 
-.px-12{
-  padding-left: 3rem;
-  padding-right: 3rem;
-}
-
 .py-6{
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
@@ -1190,10 +1175,6 @@ video {
 
 .pb-12{
   padding-bottom: 3rem;
-}
-
-.pl-2{
-  padding-left: 0.5rem;
 }
 
 .text-left{
@@ -1247,6 +1228,10 @@ video {
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-\[40px\]{
+  font-size: 40px;
 }
 
 .font-\[600\]{
@@ -1330,11 +1315,6 @@ video {
 .text-\[\#242424\]{
   --tw-text-opacity: 1;
   color: rgb(36 36 36 / var(--tw-text-opacity));
-}
-
-.text-\[\#f57456\]{
-  --tw-text-opacity: 1;
-  color: rgb(245 116 86 / var(--tw-text-opacity));
 }
 
 .shadow{
@@ -1932,6 +1912,10 @@ main p:last-child {
   #contact-form {
     box-shadow: 10px 15px 40px -20px var(--grayishBlue);
   }
+
+  #ambassador {
+    box-shadow: 10px 15px 40px -20px var(--grayishBlue);
+  }
 }
 
 input::-webkit-outer-spin-button,
@@ -2008,10 +1992,6 @@ input[type="number"] {
 
   .md\:mt-8{
     margin-top: 2rem;
-  }
-
-  .md\:mb-16{
-    margin-bottom: 4rem;
   }
 
   .md\:mb-20{
@@ -2093,10 +2073,6 @@ input[type="number"] {
     padding: 0.5rem;
   }
 
-  .md\:p-4{
-    padding: 1rem;
-  }
-
   .md\:py-2{
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
@@ -2120,6 +2096,11 @@ input[type="number"] {
   .md\:py-12{
     padding-top: 3rem;
     padding-bottom: 3rem;
+  }
+
+  .md\:px-12{
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
 
   .md\:pl-20{
