--- a/input.css
+++ b/input.css
@@ -540,6 +540,9 @@ main p:last-child {
   #contact-form {
     box-shadow: 10px 15px 40px -20px var(--grayishBlue);
   }
+  #ambassador {
+    box-shadow: 10px 15px 40px -20px var(--grayishBlue);
+  }
 }
 
 input::-webkit-outer-spin-button,
