--- a/css/main.css
+++ b/css/main.css
@@ -595,10 +595,6 @@ video {
   bottom: 0px;
 }
 
-.left-6{
-  left: 1.5rem;
-}
-
 .-left-64{
   left: -16rem;
 }
@@ -632,6 +628,11 @@ video {
   margin-right: auto;
 }
 
+.my-3{
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
 .my-4{
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -662,10 +663,6 @@ video {
   margin-top: 16rem;
 }
 
-.mb-4{
-  margin-bottom: 1rem;
-}
-
 .mt-28{
   margin-top: 7rem;
 }
@@ -678,16 +675,20 @@ video {
   margin-top: 4rem;
 }
 
+.mt-20{
+  margin-top: 5rem;
+}
+
 .mb-12{
   margin-bottom: 3rem;
 }
 
-.mb-8{
-  margin-bottom: 2rem;
+.ml-10{
+  margin-left: 2.5rem;
 }
 
-.mt-20{
-  margin-top: 5rem;
+.mb-8{
+  margin-bottom: 2rem;
 }
 
 .mb-2{
@@ -704,6 +705,10 @@ video {
 
 .mb-20{
   margin-bottom: 5rem;
+}
+
+.mb-4{
+  margin-bottom: 1rem;
 }
 
 .block{
@@ -727,16 +732,16 @@ video {
   height: fit-content;
 }
 
-.h-px{
-  height: 1px;
-}
-
 .h-\[auto\]{
   height: auto;
 }
 
 .h-full{
   height: 100%;
+}
+
+.h-px{
+  height: 1px;
 }
 
 .h-\[400px\]{
@@ -763,6 +768,14 @@ video {
   width: 66.666667%;
 }
 
+.w-\[600px\]{
+  width: 600px;
+}
+
+.w-\[300px\]{
+  width: 300px;
+}
+
 .w-60{
   width: 15rem;
 }
@@ -775,20 +788,8 @@ video {
   width: 11rem;
 }
 
-.w-\[600px\]{
-  width: 600px;
-}
-
 .w-\[180px\]{
   width: 180px;
-}
-
-.w-\[200px\]{
-  width: 200px;
-}
-
-.w-\[300px\]{
-  width: 300px;
 }
 
 .max-w-md{
@@ -817,6 +818,10 @@ video {
 
 .cursor-pointer{
   cursor: pointer;
+}
+
+.resize-none{
+  resize: none;
 }
 
 .appearance-none{
@@ -912,18 +917,6 @@ video {
   margin-bottom: calc(3rem * var(--tw-space-y-reverse));
 }
 
-.space-y-6 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
-}
-
-.space-x-14 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(3.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(3.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .space-y-3 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
@@ -958,6 +951,10 @@ video {
   border-width: 0px;
 }
 
+.border-b-\[2px\]{
+  border-bottom-width: 2px;
+}
+
 .border-t{
   border-top-width: 1px;
 }
@@ -970,6 +967,11 @@ video {
 .border-gray-200{
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.border-\[\#01c0c4\]{
+  --tw-border-opacity: 1;
+  border-color: rgb(1 192 196 / var(--tw-border-opacity));
 }
 
 .border-b-slate-200{
@@ -1011,14 +1013,14 @@ video {
   background-color: rgb(15 109 109 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#242424\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(36 36 36 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#f8f8f8\]{
   --tw-bg-opacity: 1;
   background-color: rgb(248 248 248 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#242424\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(36 36 36 / var(--tw-bg-opacity));
 }
 
 .bg-gray-100{
@@ -1113,11 +1115,6 @@ video {
   padding-bottom: 3rem;
 }
 
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
 .px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -1131,6 +1128,11 @@ video {
 .py-6{
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+
+.px-10{
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .pt-4{
@@ -1157,10 +1159,6 @@ video {
   padding-top: 1.25rem;
 }
 
-.pt-2{
-  padding-top: 0.5rem;
-}
-
 .pb-2{
   padding-bottom: 0.5rem;
 }
@@ -1175,6 +1173,10 @@ video {
 
 .pb-12{
   padding-bottom: 3rem;
+}
+
+.pt-20{
+  padding-top: 5rem;
 }
 
 .text-left{
@@ -1221,13 +1223,13 @@ video {
   font-size: 16px;
 }
 
-.text-\[1em\]{
-  font-size: 1em;
-}
-
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-\[1em\]{
+  font-size: 1em;
 }
 
 .text-\[40px\]{
@@ -1258,12 +1260,12 @@ video {
   font-weight: 800;
 }
 
-.font-\[400\]{
-  font-weight: 400;
-}
-
 .font-light{
   font-weight: 300;
+}
+
+.font-\[400\]{
+  font-weight: 400;
 }
 
 .uppercase{
@@ -1928,6 +1930,47 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
+.course-col h1 {
+  font-size: 40px;
+  font-weight: 600;
+}
+
+.course-col p {
+  color: #777;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+  text-align: center;
+  padding: 5px;
+}
+
+.index-row {
+  margin-top: 3%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.course-col {
+  flex-basis: 31%;
+  background-color: #befcf35e;
+  border-radius: 10px;
+  margin-bottom: 5%;
+  padding: 15px 12px;
+  box-sizing: border-box;
+  transition: 0.5s;
+}
+
+.course-col h3 {
+  font-size: 18px;
+  text-align: center;
+  font-weight: 600;
+  margin: 10px 0;
+}
+
+.course-col:hover {
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
+}
+
 .hover\:bg-accent:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(1 211 175 / var(--tw-bg-opacity));
@@ -1964,10 +2007,6 @@ input[type="number"] {
 }
 
 @media (min-width: 640px){
-  .sm\:w-auto{
-    width: auto;
-  }
-
   .sm\:self-center{
     align-self: center;
   }
@@ -1980,6 +2019,10 @@ input[type="number"] {
 
   .md\:top-0{
     top: 0px;
+  }
+
+  .md\:mb-12{
+    margin-bottom: 3rem;
   }
 
   .md\:mb-0{
@@ -2014,10 +2057,6 @@ input[type="number"] {
     height: 590px;
   }
 
-  .md\:w-full{
-    width: 100%;
-  }
-
   .md\:w-1\/2{
     width: 50%;
   }
@@ -2026,12 +2065,20 @@ input[type="number"] {
     width: 800px;
   }
 
+  .md\:w-full{
+    width: 100%;
+  }
+
   .md\:w-\[600px\]{
     width: 600px;
   }
 
   .md\:max-w-3xl{
     max-width: 48rem;
+  }
+
+  .md\:max-w-4xl{
+    max-width: 56rem;
   }
 
   .md\:max-w-full{
@@ -2103,8 +2150,14 @@ input[type="number"] {
     padding-right: 3rem;
   }
 
-  .md\:pl-20{
-    padding-left: 5rem;
+  .md\:py-4{
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .md\:px-8{
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 
   .md\:pt-8{
@@ -2137,29 +2190,25 @@ input[type="number"] {
     line-height: 1;
   }
 
-  .md\:text-\[24px\]{
-    font-size: 24px;
-  }
-
   .md\:text-5xl{
     font-size: 3rem;
     line-height: 1;
+  }
+
+  .md\:text-\[24px\]{
+    font-size: 24px;
   }
 
   .md\:font-bold{
     font-weight: 700;
   }
 
-  .md\:font-extrabold{
-    font-weight: 800;
-  }
-
   .md\:font-normal{
     font-weight: 400;
   }
 
-  .md\:font-black{
-    font-weight: 900;
+  .md\:font-extrabold{
+    font-weight: 800;
   }
 }
 
