--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,8 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Teko:wght@400;500;600&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+
 /*
 ! tailwindcss v3.2.4 | MIT License | https://tailwindcss.com
 */
@@ -756,16 +758,20 @@ video {
   width: 100vw;
 }
 
+.w-1\/3{
+  width: 33.333333%;
+}
+
 .w-\[50px\]{
   width: 50px;
 }
 
-.w-full{
-  width: 100%;
-}
-
 .w-2\/3{
   width: 66.666667%;
+}
+
+.w-full{
+  width: 100%;
 }
 
 .w-\[600px\]{
@@ -792,6 +798,18 @@ video {
   width: 180px;
 }
 
+.min-w-\[300px\]{
+  min-width: 300px;
+}
+
+.min-w-\[400px\]{
+  min-width: 400px;
+}
+
+.min-w-\[200px\]{
+  min-width: 200px;
+}
+
 .max-w-md{
   max-width: 28rem;
 }
@@ -808,8 +826,52 @@ video {
   max-width: 42rem;
 }
 
+.max-w-\[400px\]{
+  max-width: 400px;
+}
+
+.max-w-\[350px\]{
+  max-width: 350px;
+}
+
+.max-w-\[200px\]{
+  max-width: 200px;
+}
+
+.max-w-\[500px\]{
+  max-width: 500px;
+}
+
+.max-w-\[800px\]{
+  max-width: 800px;
+}
+
+.max-w-\[900px\]{
+  max-width: 900px;
+}
+
+.max-w-\[750px\]{
+  max-width: 750px;
+}
+
+.max-w-3xl{
+  max-width: 48rem;
+}
+
+.flex-shrink-0{
+  flex-shrink: 0;
+}
+
+.flex-shrink{
+  flex-shrink: 1;
+}
+
 .shrink-0{
   flex-shrink: 0;
+}
+
+.flex-grow{
+  flex-grow: 1;
 }
 
 .transform{
@@ -848,6 +910,10 @@ video {
 
 .items-start{
   align-items: flex-start;
+}
+
+.items-end{
+  align-items: flex-end;
 }
 
 .items-center{
@@ -921,6 +987,18 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
+.space-y-10 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
+}
+
+.space-y-5 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
 
 .self-end{
@@ -1008,6 +1086,11 @@ video {
   background-color: rgb(248 250 252 / var(--tw-bg-opacity));
 }
 
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#0f6d6d\]{
   --tw-bg-opacity: 1;
   background-color: rgb(15 109 109 / var(--tw-bg-opacity));
@@ -1033,6 +1116,21 @@ video {
   background-color: rgb(1 211 175 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#c7cacb\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(199 202 203 / var(--tw-bg-opacity));
+}
+
+.bg-red-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+}
+
+.bg-textBlue{
+  --tw-bg-opacity: 1;
+  background-color: rgb(1 17 69 / var(--tw-bg-opacity));
+}
+
 .object-contain{
   -o-object-fit: contain;
      object-fit: contain;
@@ -1041,6 +1139,11 @@ video {
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.object-fill{
+  -o-object-fit: fill;
+     object-fit: fill;
 }
 
 .object-right{
@@ -1058,6 +1161,18 @@ video {
 
 .p-2{
   padding: 0.5rem;
+}
+
+.p-6{
+  padding: 1.5rem;
+}
+
+.p-9{
+  padding: 2.25rem;
+}
+
+.p-0{
+  padding: 0px;
 }
 
 .px-4{
@@ -1115,9 +1230,9 @@ video {
   padding-bottom: 3rem;
 }
 
-.px-6{
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+.px-10{
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .py-10{
@@ -1125,14 +1240,14 @@ video {
   padding-bottom: 2.5rem;
 }
 
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .py-6{
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
-}
-
-.px-10{
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
 }
 
 .pt-4{
@@ -1179,6 +1294,46 @@ video {
   padding-top: 5rem;
 }
 
+.pl-10{
+  padding-left: 2.5rem;
+}
+
+.pt-24{
+  padding-top: 6rem;
+}
+
+.pt-28{
+  padding-top: 7rem;
+}
+
+.pt-10{
+  padding-top: 2.5rem;
+}
+
+.pt-8{
+  padding-top: 2rem;
+}
+
+.pl-12{
+  padding-left: 3rem;
+}
+
+.pl-24{
+  padding-left: 6rem;
+}
+
+.pr-10{
+  padding-right: 2.5rem;
+}
+
+.pr-24{
+  padding-right: 6rem;
+}
+
+.pr-20{
+  padding-right: 5rem;
+}
+
 .text-left{
   text-align: left;
 }
@@ -1189,6 +1344,10 @@ video {
 
 .font-title{
   font-family: Teko;
+}
+
+.font-pop{
+  font-family: Poppins;
 }
 
 .text-4xl{
@@ -1317,6 +1476,21 @@ video {
 .text-\[\#242424\]{
   --tw-text-opacity: 1;
   color: rgb(36 36 36 / var(--tw-text-opacity));
+}
+
+.text-darkGreen{
+  --tw-text-opacity: 1;
+  color: rgb(6 54 56 / var(--tw-text-opacity));
+}
+
+.text-\[\#7594eb\]{
+  --tw-text-opacity: 1;
+  color: rgb(117 148 235 / var(--tw-text-opacity));
+}
+
+.text-\[\#90ba82\]{
+  --tw-text-opacity: 1;
+  color: rgb(144 186 130 / var(--tw-text-opacity));
 }
 
 .shadow{
@@ -1937,7 +2111,7 @@ input[type="number"] {
 
 .course-col p {
   color: #777;
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 400;
   line-height: 22px;
   text-align: center;
@@ -2180,13 +2354,17 @@ input[type="number"] {
     padding-top: 3rem;
   }
 
+  .md\:text-left{
+    text-align: left;
+  }
+
   .md\:text-sm{
     font-size: 0.875rem;
     line-height: 1.25rem;
   }
 
-  .md\:text-6xl{
-    font-size: 3.75rem;
+  .md\:text-7xl{
+    font-size: 4.5rem;
     line-height: 1;
   }
 
@@ -2197,6 +2375,11 @@ input[type="number"] {
 
   .md\:text-\[24px\]{
     font-size: 24px;
+  }
+
+  .md\:text-6xl{
+    font-size: 3.75rem;
+    line-height: 1;
   }
 
   .md\:font-bold{
