--- a/css/main.css
+++ b/css/main.css
@@ -802,6 +802,10 @@ video {
   width: 180px;
 }
 
+.w-\[150px\]{
+  width: 150px;
+}
+
 .max-w-lg{
   max-width: 32rem;
 }
@@ -1039,6 +1043,11 @@ video {
   background-color: rgb(1 211 175 / var(--tw-bg-opacity));
 }
 
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .object-contain{
   -o-object-fit: contain;
      object-fit: contain;
@@ -1064,6 +1073,14 @@ video {
 
 .p-2{
   padding: 0.5rem;
+}
+
+.p-0{
+  padding: 0px;
+}
+
+.p-9{
+  padding: 2.25rem;
 }
 
 .px-4{
