--- a/css/main.css
+++ b/css/main.css
@@ -1680,12 +1680,12 @@ details[open] .faq-card-spoiler {
   color: rgb(59, 137, 255);
 }
 
-#whatsapp:hover {
-  color: lightgreen;
+#instagram:hover {
+  color: violet;
 }
 
 #gmail:hover {
-  color: lightgoldenrodyellow;
+  color: lightgreen;
 }
 
 #twitter:hover {
