--- a/input.css
+++ b/input.css
@@ -367,10 +367,11 @@ details[open] .faq-card-spoiler {
   color: rgb(59, 137, 255);
 }
 #instagram:hover {
-  color: violet;
+  /* color: violet; */
+  color: rgb(196, 196, 196);
 }
 #gmail:hover {
-  color: lightgreen;
+  color: rgb(235, 134, 134);
 }
 #twitter:hover {
   color: powderblue;
